[metadata]
name = Sentience-CraigR8806
version = 0.0.1
author = Craig Ramage
author_email = craig@craigramage.com
description = Machine Learning Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CraigR8806/Sentience
project_urls =
    Bug Tracker = https://github.com/CraigR8806/Sentience/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    numpy == 1.22.2
    platformdirs == 2.5.0
    pyopencl == 2022.1
    pytools == 2022.1
    ParallelLinear @ git+https://github.com/CraigR8806/ParallelLinear.git@3e4a9882184ed60e54ac5145665fc154f6adac09

[options.packages.find]
where = src